--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 
 @layer base {
   :root {
-    --background: 0, 0%, 100%;
-    --foreground: 0, 0%, 16%;
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -13,70 +13,125 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --default: 0, 0%, 100%;
-    --default-foreground: 0, 0%, 0%;
+    --primary: 235, 53%, 26%, 1;
+    --primary-foreground: 210 40% 98%;
 
-    --primary: 235, 53%, 26%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 252, 67%, 26%;
+    --secondary: 38, 100%, 68%, 1;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
-    --muted: 210 40% 96.1%;
+    --muted: 0, 0%, 85%, 1;
     --muted-foreground: 215.4 16.3% 46.9%;
 
-    --accent: 215, 98%, 48%;
-    --accent-foreground: 0 0% 100%;
+    --accent: 216, 93%, 95%, 1;
+    --accent-foreground: 222.2 47.4% 11.2%;
 
-    --destructive: 0, 100%, 50%;
-    --destructive-hover: 0 72% 51%;
-    --destructive-foreground: 0 0% 100%;
+    --destructive: 353, 85%, 44%, 1;
+    --destructive-foreground: 210 40% 98%;
 
-    --subtle: 216, 93%, 95%;
-    --subtle-hover: 214 32% 91%;
-    --subtle-foreground: 222 47% 11%;
-
-    --loading: 222 47% 11%;
-    --loading-hover: 215 25% 27%;
-    --loading-foreground: 0 0% 100%;
-
-    --outline: 0 0% 100%;
-    --outline-hover: 210 40% 96%;
-    --outline-foreground: 222 47% 11%;
-
-    --link: 222 47% 11%;
-
-    --error: 0 72% 51%;
-    --success: 163, 86%, 40%;
-    --warning: 45 93% 47%;
-
-    --border: 214 32% 91%;
-    --input: 214 32% 91%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
-
     --radius: 0.5rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
 
-    --stroke-colors-stroke: 213 27% 84%;
+    /* tsa design system */
+    --white: 0, 0%, 100%;
+    --black: 222.2 84% 4.9%;
 
-    --neutralColor-dark-1: 0, 0%, 12%;
-    --neutralColor-dark-2: 180, 2%, 11%;
-    --description-text: 215 16% 47%;
-    --breadcrumb-page: 0 0% 42%;
-    --breadcrumb-foreground: 0 0% 13%;
-    --desaturated-blue: 212.73 26.83% 83.92%;
-    --grey50: 0 0% 85.1%;
+    --high-blue: 235, 53%, 26%, 1;
+    --mid-blue: 215, 98%, 48%, 1;
+    --low-blue: 216, 93%, 95%, 1;
 
-    --toast-bg: 128, 50%, 94%;
-    --toast-border: 126, 50%, 58%;
+    --high-danger: 353, 74%, 28%, 1;
+    --mid-danger: 353, 85%, 44%, 1;
+    --low-danger: 360, 95%, 87%, 1;
 
-    --default-badge-bg: 222, 47%, 11%, 0.1;
-    --primary-badge-bg: 25, 95%, 53%, 0.1;
-    --success-badge-bg: 102, 51%, 52%, 0.1;
-    --error-badge-bg: 0, 72%, 51%, 0.1;
+    --high-warning: 38, 58%, 24%, 1;
+    --mid-warning: 38, 100%, 68%, 1;
+    --low-warning: 38, 100%, 87%, 1;
 
-    --blog-related-article-bg: 0°, 0%, 98%;
-    --blog-related-article-heading: 0°, 0%, 32%;
-    --blog-related-article-timeread-bg: 220°, 14%, 96%;
+    --high-success: 140, 69%, 20%, 1;
+    --mid-success: 140, 79%, 32%, 1;
+    --low-success: 140, 38%, 85%, 1;
+
+    --high-grey-III: 0, 0%, 12%, 1;
+    --mid-grey-III: 0, 0%, 21%, 1;
+    --low-grey-III: 0, 0%, 28%, 1;
+
+    --high-grey-II: 0, 0%, 56%, 1;
+    --mid-grey-II: 248, 1%, 71%, 1;
+    --low-grey-II: 0, 0%, 85%, 1;
+
+    --high-grey-I: 0, 0%, 95%, 1;
+    --mid-grey-I: 0, 0%, 98%, 1;
+    --low-grey-I: 0, 0%, 100%, 1;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%; /* dark background */
+    --foreground: 0 0% 100%; /* light foreground */
+
+    --card: 222.2 84% 4.9%; /* dark card background */
+    --card-foreground: 0 0% 100%; /* light card foreground */
+
+    --popover: 222.2 84% 4.9%; /* dark popover background */
+    --popover-foreground: 0 0% 100%; /* light popover foreground */
+
+    --primary: 353, 85%, 44%, 1; /* dark primary color */
+    --primary-foreground: 210 40% 98%; /* light primary foreground */
+
+    --secondary: 38, 100%, 68%, 1; /* dark secondary color */
+    --secondary-foreground: 222.2 47.4% 11.2%; /* light secondary foreground */
+
+    --muted: 0, 0%, 56%, 1; /* dark muted color */
+    --muted-foreground: 215.4 16.3% 46.9%; /* light muted foreground */
+
+    --accent: ; /* this is a wildcard */
+    --accent-foreground: 222.2 47.4% 11.2%; /* light accent foreground */
+
+    --destructive: 353, 74%, 28%, 1; /* dark destructive color */
+    --destructive-foreground: 210 40% 98%; /* light destructive foreground */
+
+    --border: 214.3 31.8% 91.4%; /* dark border color */
+    --input: 214.3 31.8% 91.4%; /* dark input color */
+    --ring: 222.2 84% 4.9%; /* dark ring color */
+    --radius: 0.5rem; /* same radius */
+
+    /* tsa design system */
+    --white: 222.2 84% 4.9%; /* dark white */
+    --black: 0 0% 100%; /* light black */
+
+    --high-blue: 235, 53%, 26%, 1; /* dark high blue */
+    --mid-blue: 215, 98%, 48%, 1; /* dark mid blue */
+    --low-blue: 216, 93%, 95%, 1; /* dark low blue */
+
+    --high-danger: 353, 74%, 28%, 1; /* dark high danger */
+    --mid-danger: 353, 85%, 44%, 1; /* dark mid danger */
+    --low-danger: 360, 95%, 87%, 1; /* dark low danger */
+
+    --high-warning: 38, 58%, 24%, 1; /* dark high warning */
+    --mid-warning: 38, 100%, 68%, 1; /* dark mid warning */
+    --low-warning: 38, 100%, 87%, 1; /* dark low warning */
+
+    --high-success: 140, 69%, 20%, 1; /* dark high success */
+    --mid-success: 140, 79%, 32%, 1; /* dark mid success */
+    --low-success: 140, 38%, 85%, 1; /* dark low success */
+
+    --high-grey-III: 0, 0%, 12%, 1; /* dark high grey III */
+    --mid-grey-III: 0, 0%, 21%, 1; /* dark mid grey III */
+    --low-grey-III: 0, 0%, 28%, 1; /* dark low grey III */
+
+    --high-grey-II: 0, 0%, 56%, 1; /* dark high grey II */
+    --mid-grey-II: 248, 1%, 71%, 1; /* dark mid grey II */
+    --low-grey-II: 0, 0%, 85%, 1; /* dark low grey II */
+
+    --high-grey-I: 0, 0%, 95%, 1; /* dark high grey I */
+    --mid-grey-I: 0, 0%, 98%, 1; /* dark mid grey I */
+    --low-grey-I: 0, 0%, 100%, 1; /* dark low grey I */
   }
 }
 
