--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,8 +152,20 @@
   body {
     @apply bg-background text-foreground;
   }
+  h1,
+  h2,
+  h3 {
+    @apply font-bold text-primary;
+  }
+  .dark h1,
+  .dark h2,
+  .dark h3 {
+    color: hsl(var(--foreground));
+  }
+  .dark p {
+    color: hsl(var(--primary));
+  }
 }
-
 [data-placeholder="true"] {
   background: linear-gradient(
     90deg,
@@ -163,10 +175,8 @@
   );
   background-size: cover;
   transform: translateX(-120%);
-
   animation: shimmer 1s ease-in-out infinite;
 }
-
 @keyframes shimmer {
   0% {
     transform: translateX(-120%);
@@ -206,36 +216,28 @@
     stroke-dashoffset: -59;
   }
 }
-
-/* Custom Scrollbar Styling */
-/* For Webkit Browsers */
 ::-webkit-scrollbar {
-  width: 12px; /* Width of the scrollbar */
+  width: 12px;
 }
-
 ::-webkit-scrollbar-thumb {
   @apply bg-primary;
   border: 4px solid transparent;
   border-radius: 10px;
   background-clip: content-box;
 }
-
 ::-webkit-scrollbar-thumb:hover {
   @apply bg-primary;
   background-clip: content-box;
 }
-
 ::-webkit-scrollbar-track {
   background: hsla(0, 0%, 0%, 0.06); /* Color of the track */
   border-radius: 10px; /* Rounded corners of the track */
 }
-
 /* For Firefox */
 .html {
   @apply bg-primary;
   scrollbar-width: thin; /* Options are 'auto', 'thin', 'none' */
 }
-
 /* For Internet Explorer and Legacy Edge */
 body {
   -ms-overflow-style: scrollbar; /* Standard scrollbar */
