--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,6 +164,10 @@
     color: hsl(var(--primary));
   }
 
+  button {
+    height: 48px;
+  }
+
   h1 {
     font-size: 2.25rem; /* 36px */
     font-weight: 700; /* Consistent weight for headings */
